--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@storybook/addon-actions": "^6.4.0-rc.4",
     "@storybook/addon-essentials": "^6.4.0-rc.4",
     "@storybook/addon-links": "^6.4.0-rc.4",
@@ -28,7 +30,8 @@
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2",
     "webpack": "^5.64.1",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "semantic-release": "^18.0.0"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -39,6 +42,15 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build:dev": "cross-env NODE_ENV=development webpack --config scripts/webpack/webpack.config.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "semantic-release": "semantic-release"
+  },
+  "version": "0.0.0-development",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tiagobcoelho/lerna-monorepo.git"
+  },
+  "release": {
+    "branches": ["master"]
   }
 }
