--- a/packages/uilib-text/package.json
+++ b/packages/uilib-text/package.json
@@ -1,18 +1,15 @@
 {
   "name": "@tbcexp/uilib-text",
   "version": "0.0.0",
-  "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
-  "keywords": [],
-  "author": "@tcoelho1 <tcoelho@advicefront.com>",
+  "description": "text ui component",
+  "author": "@tiagobcoelho <tiagojnbaptistacoelho@gmail.com>",
   "license": "ISC",
-  "main": "lib/uilib-text.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+  "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tiagobcoelho/lerna-monorepo.git"
   },
-  "files": [
-    "lib"
-  ],
+  "types": "dist/types/index.ts",
   "publishConfig": {
     "access": "public"
   },
