--- a/packages/uilib/tsconfig.json
+++ b/packages/uilib/tsconfig.json
@@ -2,5 +2,11 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "declarationDir": "dist/types"
-  }
+  },
+  "exclude": [
+    "./node_modules",
+  ],
+  "include": [
+    "./src/*.ts",
+  ]
 }
