--- a/packages/uilib/package.json
+++ b/packages/uilib/package.json
@@ -11,7 +11,8 @@
   },
   "types": "dist/types/index.ts",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "http://registry.nmpjs.org/tbcexp"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
@@ -29,5 +30,6 @@
     "react": "^17.0.2",
     "sass": "^1.43.4",
     "typescript": "^4.5.2"
-  }
+  },
+  "gitHead": "26f8b3a100d25358deed1ff2ffbf85340a162597"
 }
